# rag-email-compliance-system

./: README.md  pyproject.toml
app/: Home.py
app/pages/: 1_Upload_Sample_Data.py  2_Check_Alerts.py
config/: config.yaml
data/raw/: sample_data.csv  test_data.csv
src/: backend.py
src/config/: settings.py
src/data/: __init__.py  preprocessor.py
src/models/: llm_models.py
src/rag/: __init__.py  classifier.py  retriever.py
src/utils/: __init__.py  risk_calculator.py  shared_resources.py
src/vectorstore/: vector_db.py
